cbits/Bullet.h

void btSoftBody_Cluster_m_lv_get(void *c,float* a);
void btSoftBody_Cluster_m_masses_set(void *c,void* a); //attribute: ::btAlignedObjectArray<float> btSoftBody_Cluster->m_masses
void* btSoftBody_Cluster_m_masses_get(void *c); //attribute: ::btAlignedObjectArray<float> btSoftBody_Cluster->m_masses
void btSoftBody_Cluster_m_matching_set(void *c,float a); //attribute: ::btScalar btSoftBody_Cluster->m_matching
float btSoftBody_Cluster_m_matching_get(void *c); //attribute: ::btScalar btSoftBody_Cluster->m_matching
void btSoftBody_Cluster_m_maxSelfCollisionImpulse_set(void *c,float a); //attribute: ::btScalar btSoftBody_Cluster->m_maxSelfCollisionImpulse
float btSoftBody_Cluster_m_maxSelfCollisionImpulse_get(void *c); //attribute: ::btScalar btSoftBody_Cluster->m_maxSelfCollisionImpulse
void btSoftBody_Cluster_m_ndamping_set(void *c,float a); //attribute: ::btScalar btSoftBody_Cluster->m_ndamping
float btSoftBody_Cluster_m_ndamping_get(void *c); //attribute: ::btScalar btSoftBody_Cluster->m_ndamping
void btSoftBody_Cluster_m_ndimpulses_set(void *c,int a); //attribute: int btSoftBody_Cluster->m_ndimpulses
int btSoftBody_Cluster_m_ndimpulses_get(void *c); //attribute: int btSoftBody_Cluster->m_ndimpulses
void btSoftBody_Cluster_m_nodes_set(void *c,void* a); //attribute: ::btAlignedObjectArray<btSoftBody::Node*> btSoftBody_Cluster->m_nodes
void* btSoftBody_Cluster_m_nodes_get(void *c); //attribute: ::btAlignedObjectArray<btSoftBody::Node*> btSoftBody_Cluster->m_nodes
void btSoftBody_Cluster_m_nvimpulses_set(void *c,int a); //attribute: int btSoftBody_Cluster->m_nvimpulses
int btSoftBody_Cluster_m_nvimpulses_get(void *c); //attribute: int btSoftBody_Cluster->m_nvimpulses
void btSoftBody_Cluster_m_selfCollisionImpulseFactor_set(void *c,float a); //attribute: ::btScalar btSoftBody_Cluster->m_selfCollisionImpulseFactor
float btSoftBody_Cluster_m_selfCollisionImpulseFactor_get(void *c); //attribute: ::btScalar btSoftBody_Cluster->m_selfCollisionImpulseFactor
// attribute not supported: //attribute: ::btVector3[2] btSoftBody_Cluster->m_vimpulses
void* btSoftBody_Config_new(); //constructor: Config  ( ::btSoftBody::Config::* )(  ) 
void btSoftBody_Config_free(void *c);
 
// attribute not supported: //attribute: ::btSoftBody::eAeroModel::_ btSoftBody_Config->aeromodel
void btSoftBody_Config_kVCF_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kVCF
float btSoftBody_Config_kVCF_get(void *c); //attribute: ::btScalar btSoftBody_Config->kVCF
void btSoftBody_Config_kDP_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kDP
float btSoftBody_Config_kDP_get(void *c); //attribute: ::btScalar btSoftBody_Config->kDP
void btSoftBody_Config_kDG_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kDG
float btSoftBody_Config_kDG_get(void *c); //attribute: ::btScalar btSoftBody_Config->kDG
void btSoftBody_Config_kLF_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kLF
float btSoftBody_Config_kLF_get(void *c); //attribute: ::btScalar btSoftBody_Config->kLF
void btSoftBody_Config_kPR_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kPR
float btSoftBody_Config_kPR_get(void *c); //attribute: ::btScalar btSoftBody_Config->kPR
void btSoftBody_Config_kVC_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kVC
float btSoftBody_Config_kVC_get(void *c); //attribute: ::btScalar btSoftBody_Config->kVC
void btSoftBody_Config_kDF_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kDF
float btSoftBody_Config_kDF_get(void *c); //attribute: ::btScalar btSoftBody_Config->kDF
void btSoftBody_Config_kMT_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kMT
float btSoftBody_Config_kMT_get(void *c); //attribute: ::btScalar btSoftBody_Config->kMT
void btSoftBody_Config_kCHR_set(void *c,float a); //attribute: ::btScalar btSoftBody_Config->kCHR
float btSoftBody_Config_kCHR_get(void *c); //attribute: ::btScalar btSoftBody_Config->kCHR